infrastructure/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 4002
        name: oneguru
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 9898
        name: onedb
        protocol: TCP
      hosts:
        - "*"
